--- a/inicio.css
+++ b/inicio.css
@@ -7,6 +7,11 @@ body{
     background-color:blanchedalmond;
     
 }
+.titu:hover{
+    transform: translateX(30px);
+    transition: all 3s;
+
+}
 .contenedor{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -123,6 +128,27 @@ ul.menu{
     background-color:white;
 }      
 /*aca empieza el main*/
+.foto1:hover{
+    transform: scale(3);
+    transition-property:all;
+    transition-duration: 2s ;
+}
+.foto2:hover{
+    transform: scale(3);
+    transition-property:all;
+    transition-duration: 2s ;
+}
+.foto3:hover{
+    transform: scale(3);
+    transition-property:all;
+    transition-duration: 2s ;
+}
+.foto4:hover{
+    transform: scale(3);
+    transition-property:all;
+    transition-duration: 2s ;
+}
+
 main.somos{
     background-color:blanchedalmond;
 }
@@ -171,16 +197,43 @@ footer h3{background-image:url("imagen/corte.jpg") ;
     width: 230px;
     background-repeat: repeat-x;
     color:white;
-    position: relative;
+    position: static;
     left: 10px;
     border-style:solid;
     border-color: black;
     border-radius: 8px;
 }
+.mueve1{
+    transition: all 3s ease-in;
+}
+.mueve2{
+    transition: all 3s ease-in;
+}
+.mueve3{
+    transition: all 3s ease-in;
+}
+.se-mueve:hover .mueve1,
+.se-mueve:hover .mueve2,
+.se-mueve:hover .mueve3{
+    transform:translateX(100px) ;
+
+}
+
 
 .listas li a{
     color: black;
 }
+
+.animacion:hover{
+    animation:change-color 6s;
+
+}
+@keyframes change-color{
+    0%{background-color: black;}
+    15%{border-radius: 50%;}
+    75%{width: 600px;}
+}
+
 ul.listas{
     display: flex;
     flex-direction: row ;
@@ -197,8 +250,8 @@ ul.listas{
 
 
 .redes{
-    position:relative;
-    left: 300px;
+    position:static;
+    left: px;
 }
 div.mapa{
     width: 5px;
